--- a/src/css/base.css
+++ b/src/css/base.css
@@ -11,6 +11,10 @@ body {
     font-weight: 400;
     font-style: normal;
     letter-spacing: 2px;
+    background-image: url(../img/img.jpg);
+    background-repeat: no-repeat;
+    /* background-position: center; */
+    background-size: cover;
 
 }
 
