--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -13,6 +13,7 @@
     text-align: center;
     border: 1px solid #808080;
     border-radius: 4px;
+    background-color: antiquewhite;
 }
 
 .gallery-item:hover {
@@ -44,6 +45,15 @@
     align-items: center;
     margin: 0 auto;
     margin-bottom: 18px;
+    background-color: #fff;
+    opacity: 0.5;
+    max-width: 360px;
+    border-radius: 4px;
+    transition: opacity 500ms ease-in-out;
+}
+
+.form:hover {
+    opacity: 1;
 }
 
 .input {
@@ -75,7 +85,20 @@
     cursor: pointer;
 }
 
+.form-btn:hover,
+.form-btn:focus {
+    background-color: #6c8cff;
+}
+
 input::placeholder {
     padding-left: 8px;
     font-size: 14px;
+}
+
+input:hover {
+    border: 1px solid #000;
+}
+
+input:focus {
+    border: 2px solid #4e75ff;
 }
